--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,9 +19,12 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="2,0,4,0">
+     <layout class="QHBoxLayout" name="horizontalLayout_9" stretch="2,0,4,0,0">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_5">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
         <property name="topMargin">
          <number>15</number>
         </property>
@@ -855,6 +858,19 @@ QListWidget::item:hover {
          <widget class="PlotWidget" name="widget_2" native="true"/>
         </item>
        </layout>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_13">
